very nice (worldgen)
bugfix huge lily pad worldgen
fix reed worldgen
add bog beacon mushrooms worldgen

--- a/src/main/resources/assets/worldupgrade/lang/en_us.json
+++ b/src/main/resources/assets/worldupgrade/lang/en_us.json
@@ -7,6 +7,9 @@
   "block.worldupgrade.lily_pad": "Big Lily Pad",
   "block.worldupgrade.bromeliad_flaming_sword": "Flaming Sword Bromeliad",
   "block.worldupgrade.bog_beacon": "Bog Beacon",
+  "block.worldupgrade.bog_beacon_mushroom_block": "Bog Beacon Block",
+  "block.worldupgrade.tall_reeds": "Reeds",
+  "block.worldupgrade.tall_dry_reeds": "Dry Reeds",
 
   "item.worldupgrade.disguisager_spawn_egg": "Spawn Disguisager",
   "item.worldupgrade.sloth_spawn_egg": "Spawn Sloth",
